# EnvVault

./: .gitignore  README.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
electron/: main.ts  preload.ts
release/: EnvVault-1.0.0-arm64.dmg
src/: App.tsx  index.css  index.html
src/components/: SearchResult.tsx
vault-core/: Cargo.toml  index.js  package-lock.json  package.json  vault-core.darwin-arm64.node
vault-core/src/: lib.rs
